# reorder

./: Cargo.toml  README.md
src/: main.rs
tests/: main.rs
tests/inputs/: types.rs  with_newline.rs
tests/regression/: bare_mod_tests.rs  cfg_test_module.rs  constants.rs  fn_visibility.rs  impl_order.rs  imports.rs  last_item.rs  mod_after_use.rs  modules.rs  no_newline.rs  sort_by_usage.rs  types.rs
