[package]
name = "reorder"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-shear]
ignored-paths = ["tests/inputs/*.rs"]

[[test]]
name = "reorder_tests"
path = "tests/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = ["full"] }
